project(sample)

add_subdirectory(hello_world_basic)
add_subdirectory(hello_world)
add_subdirectory(hello_world_minimal)
add_subdirectory(hello_world_delayed)
add_subdirectory(hello_world_sendfile)
add_subdirectory(express_router)
add_subdirectory(express_router_tutorial)
add_subdirectory(sendfiles)
add_subdirectory(query_string_params)
add_subdirectory(websocket)
add_subdirectory(websocket_detailed)
add_subdirectory(using_external_io_context)
add_subdirectory(async_handling_with_sobjectizer)
add_subdirectory(compression)
add_subdirectory(decompression)
add_subdirectory(notificators)
add_subdirectory(custom_buffer)

if ( OPENSSL_FOUND )
	add_subdirectory(hello_world_https)
	add_subdirectory(hello_world_sendfile_https)
	add_subdirectory(websocket_wss)
endif ()

if( WIN32 )
	add_subdirectory(hello_world_sendfile_w32_unicode)
endif()