project(tests)

add_subdirectory(default_constructed_settings)
add_subdirectory(ref_qualifiers_settings)
add_subdirectory(header)
add_subdirectory(escape)
add_subdirectory(buffers)
add_subdirectory(response_coordinator)
add_subdirectory(handle_requests)
add_subdirectory(http_pipelining)
add_subdirectory(router)
