set(SAMPLE sample.decompression)
include(${CMAKE_SOURCE_DIR}/cmake/sample.cmake)

TARGET_INCLUDE_DIRECTORIES(${SAMPLE} PRIVATE ${ZLIB_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(${SAMPLE} PRIVATE ${ZLIB_LIBRARIES})

IF (RESTINIO_INSTALL_SAMPLES)
	install(FILES test_decompression.sh DESTINATION bin)
ENDIF ()
