set(UNITTEST _unit.test.router.express_pcre2)
set(UNITTEST_SRCFILES
	part1.cpp
	part2.cpp
	part3.cpp
	part4.cpp
	part5.cpp
	main.cpp )
include(${CMAKE_SOURCE_DIR}/cmake/unittest.cmake)

TARGET_COMPILE_DEFINITIONS(${UNITTEST} PRIVATE -DPCRE2_STATIC -DPCRE2_CODE_UNIT_WIDTH=8)

TARGET_INCLUDE_DIRECTORIES(${UNITTEST} PRIVATE ${PCRE2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${UNITTEST} PRIVATE ${PCRE2_LIBRARIES})
