set(TEST_BENCH _test.router.express_router_pcre2_bench)
include(${CMAKE_SOURCE_DIR}/cmake/testbench.cmake)

TARGET_COMPILE_DEFINITIONS(${TEST_BENCH} PRIVATE -DPCRE2_STATIC -DPCRE2_CODE_UNIT_WIDTH=8)

TARGET_INCLUDE_DIRECTORIES(${TEST_BENCH} PRIVATE ${PCRE2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${TEST_BENCH} PRIVATE ${PCRE2_LIBRARIES})
